# cutomer_support_agent_langmem-main

./: .gitignore  main.py  pyproject.toml
customer_support_agent/core/settings/: __init__.py  settings.py
customer_support_agent/integrations/rag/: chroma_kb.py
customer_support_agent/integrations/tools/: __init__.py  support_tools.py
customer_support_agent/repositories/sqlite/: base.py  customers.py  drafts.py
customer_support_agent/schemas/: api.py
notebooks/: experiments.ipynb
