[project]
name = "cutomer-support-agent-langmem-main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=1.2.0",
    "langchain-groq",
    "langmem>=0.0.30",
    "mem0ai>=2.0.0",
    "sentence-transformers>=5.4.1",
]
